WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244348
Misc compiler warnings, late August 2022
https://bugs.webkit.org/show_bug.cgi?id=244348
Summary
Misc compiler warnings, late August 2022
Michael Catanzaro
Reported
2022-08-25 12:08:05 PDT
[1330/2444] Building CXX object Source/WebCore/CMakeFiles/...ivedSources/unified-sources/UnifiedSource-2f84417a-2.cpp.o In file included from /home/mcatanzaro/Projects/WebKit/Source/WebCore/css/CSSComputedStyleDeclaration.cpp:42, from /home/mcatanzaro/Projects/WebKit/WebKitBuild/gtk3/WebCore/DerivedSources/unified-sources/UnifiedSource-2f84417a-2.cpp:1: /home/mcatanzaro/Projects/WebKit/Source/WebCore/css/CSSPrimitiveValueMappings.h: In function ‘constexpr WebCore::CSSValueID WebCore::toCSSValueID(ContentVisibility)’: /home/mcatanzaro/Projects/WebKit/Source/WebCore/css/CSSPrimitiveValueMappings.h:5649:1: warning: control reaches end of non-void function [-Wreturn-type] 5649 | } | ^ [1367/2444] Building CXX object Source/WebCore/CMakeFiles/...ivedSources/unified-sources/UnifiedSource-be65d27a-8.cpp.o In file included from /home/mcatanzaro/Projects/WebKit/WebKitBuild/gtk3/WebCore/DerivedSources/unified-sources/UnifiedSource-be65d27a-8.cpp:2: /home/mcatanzaro/Projects/WebKit/Source/WebCore/dom/Element.cpp: In member function ‘virtual void WebCore::Element::attributeChanged(const WebCore::QualifiedName&, const WTF::AtomString&, const WTF::AtomString&, AttributeModificationReason)’: /home/mcatanzaro/Projects/WebKit/Source/WebCore/dom/Element.cpp:2005:35: warning: unused variable ‘attribute’ [-Wunused-variable] 2005 | if (auto* attribute = elementData->findLanguageAttribute()) { | ^~~~~~~~~
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2022-08-25 13:42:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3672
EWS
Comment 2
2022-08-29 13:09:47 PDT
Committed
253923@main
(76748b407b90): <
https://commits.webkit.org/253923@main
> Reviewed commits have been landed. Closing PR #3672 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug