Misc compiler warnings, late August 2022 https://bugs.webkit.org/show_bug.cgi?id=244348

Reviewed by Ryosuke Niwa.

* Source/WebCore/css/CSSPrimitiveValueMappings.h:
(WebCore::toCSSValueID):
* Source/WebCore/dom/Element.cpp:
(WebCore::Element::attributeChanged):

Canonical link: https://commits.webkit.org/253923@main